--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
-        </div>
         <div class="carousel-item active">
+          <img src="img/DarkSpace/Screenshot 02-05-2025 203432.jpg" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/gameoflife/Screenshot 02-05-2025 203225.jpg" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
           <img src="img/Aim Fire/Screenshot 28-04-2025 001209.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -136,6 +136,40 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
+              <img src="img/DarkSpace/Screenshot 02-05-2025 203432.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Dark Space</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="DarkSpace.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/dark-space?secret=6EvR6InjAkyrfV1p5lNhvKxdfo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/gameoflife/Screenshot 02-05-2025 203225.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Conway's Game Of Life K</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="GameOfLife.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/conways-game-of-life-k?secret=0Q6laY4I0XVNz127AN7rwmNl8HI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
               <img src="img/Aim Fire/Screenshot 28-04-2025 001209.jpg" height="225"> 
               <div class="card-body">
                 <h4 class="text-info reggae-one-regular gameTitle">Aim Fire</h4>
@@ -195,24 +229,6 @@
                   <div class="btn-group">
                     <a href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/signal/Screenshot 19-12-2024 203102.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">Signal</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="Signal.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/signal?secret=ehdM6taF1z1FQkg7rO9QGefChuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="download/Genshin.signalskin" download><button type="button" class="btn btn-sm btn-outline-secondary">Genshin Skin</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -457,6 +473,24 @@
                     <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab-web?secret=NdkjK8FNgZTvBNMUarBbez0MJQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/signal/Screenshot 19-12-2024 203102.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text reggae-one-regular gameTitle">Signal</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Signal.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/signal?secret=ehdM6taF1z1FQkg7rO9QGefChuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Genshin.signalskin" download><button type="button" class="btn btn-sm btn-outline-secondary">Genshin Skin</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
