--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/DarkSpace/Screenshot 02-05-2025 203432.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -83,8 +83,8 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/spacequest/Screenshot 02-04-2025 001349.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/Bomber/Screenshot 05-05-2025 082651.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -133,6 +133,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/Bomber/Screenshot 05-05-2025 082651.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Bomber</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Bomber.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/bomber?secret=7uZ6pINXVhqUR8ZEiNqVPToyuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
@@ -220,23 +237,6 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">CSSGO</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
             <div class="card shadow-sm styleUpdate">
               <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" height="225"> 
               <div class="card-body">
@@ -281,6 +281,23 @@
                     <a href="SpaceSpector.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleBig">
+              <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-danger reggae-one-regular gameTitle">CSSGO</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
