--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
                   <div class="btn-group">
                     <a href="Kabide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/kabide?secret=Le4thvvo4sKD29e58wg3m585Z4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Kabide.apk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
