--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                   <div class="btn-group">
                     <a href="Chopper.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/chopper?secret=iiBiezGVJ6IC4M4uZbLURoNQvoU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Chopper.apk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
