--- a/index.html
+++ b/index.html
@@ -256,16 +256,17 @@
           </div>
           
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="reggae-one-regular gameTitle">Solo Shooting</h3>
+                <h3 class="text-success reggae-one-regular gameTitle">Solo Shooting</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting-web?secret=7YC0PwofQVjnk980AoMnrP7eQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                    <a href="download/Solo Shooting.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -274,15 +275,16 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/passtheway/Screenshot 07-12-2024 214202.jpg" height="225"> 
               <div class="card-body">
-                <h4 class="reggae-one-regular gameTitle">Pass The Way</h4>
+                <h4 class="text-success reggae-one-regular gameTitle">Pass The Way</h4>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="PassTheWay.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/pass-the-way?secret=g4hA47pycJ4xhsgZrJRkfg1HlIY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Pass The Way.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
