--- a/BattlePercent3.html
+++ b/BattlePercent3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Battle Percent</title>
+    <title>Battle Percent 3.0</title>
 </head>
 <body>
 
@@ -18,48 +18,28 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Battle Percent</b></p>
-      <p>-<b>Giới thiệu</b>: Battle Percent có đồ họa không còn là ước mơ mà là sự thật. Battle Percent 2.1 là phiên bản có đồ họa của Battle Percent sau hơn 2 năm kể từ khi tựa game này ra mắt.</p>
+      <p style="text-align: center;"><b>Battle Percent 3.0</b></p>
+      <p>-<b>Giới thiệu</b>: Battle Percent có đồ họa không còn là ước mơ mà là sự thật. Battle Percent 3.0 là phiên bản có đồ họa của Battle Percent sau hơn 2 năm kể từ khi tựa game này ra mắt.</p>
       <p>-<b>Phiên bản</b>: 2.1</p>
-      <p>-<b>Phát hành</b>: 04/03/2024</p>
-      <p>-<b>Last Update</b>: 04/03/2024</p>
+      <p>-<b>Phát hành</b>: 17/08/2025</p>
+      <p>-<b>Last Update</b>: 17/08/2025</p>
       <p>-<b>Thể loại</b>: PvP, Singleplayer, Multiplayer, Gacha, Đối kháng</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-      <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/battle-percent-21?secret=Rq3ZRNT42K5gPOgDoXy3mF8nJc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+      <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/battle-percent-30?secret=RfnJLMdzUwhciXSkT3dE9rE6hFQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
-<div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10">
+<div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/battlepercent2/Slide1.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/battlepercent2/Slide2.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/battlepercent2/Slide3.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/battlepercent2/Slide4.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/battlepercent2/Slide5.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/battlepercent2/Slide6.PNG" class="d-block w-100" alt="...">
+      <img src="img/battlepercent2/Screenshot 17-08-2025 101844.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -73,7 +53,7 @@
 </div>
 </div>
 </div>
-<div class="d-flex gap-2 justify-content-center py-5 bg-dark"></div>
+<div class="d-flex gap-2 justify-content-center py-5 bg-dark">
 </div>
 </body>
 
