--- a/Jumper.html
+++ b/Jumper.html
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/Jumper/Screenshot 18-05-2025 162444.jpg class="d-block w-100" alt="...">
+      <img src="img/Jumper/Screenshot 18-05-2025 162444.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
