--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/Aim Fire/Screenshot 28-04-2025 001209.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/battlepercent2/Screenshot 17-08-2025 101844.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active"> 
+        <div class="carousel-item"> 
           <img src="img/Jumper/Screenshot 18-05-2025 162444.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -133,6 +133,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/battlepercent2/Screenshot 17-08-2025 101844.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Battle Percent 3.0</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="BattlePercent3.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/battle-percent-30?secret=RfnJLMdzUwhciXSkT3dE9rE6hFQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">  Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
@@ -1119,23 +1136,6 @@
                   <div class="btn-group">
                     <a href="SimpleSanke.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/simple-snake?secret=lRcvSZefs7PQVkjsUE4cWm50M" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">  Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/battlepercent21.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text reggae-one-regular gameTitle">Battle Percent 2.1</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="BattlePercent2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/battle-percent-21?secret=Rq3ZRNT42K5gPOgDoXy3mF8nJc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">  Free</small>
                 </div>
