--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img src="img/DarkSpace/Screenshot 02-05-2025 203432.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/highfight/Screenshot 06-10-2025 220308.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
