--- a/Bombsweeper.html
+++ b/Bombsweeper.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>High Fight</title>
+    <title>Bombsweeper</title>
 </head>
 <body>
 
@@ -18,18 +18,18 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>High Fight</b></p>
-      <p>-<b>Giới thiệu</b>: Thử làm game đối kháng xem như nào hẹ hẹ.</p>
+      <p style="text-align: center;"><b>Bombsweeper</b></p>
+      <p>-<b>Giới thiệu</b>:Thử game do' bom</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 06/10/2025</p>
-      <p>-<b>Last Update</b>: 06/10/2025</p>
-      <p>-<b>Thể loại</b>: PvP, Combat</p>
+      <p>-<b>Phát hành</b>: 11/11/2025</p>
+      <p>-<b>Last Update</b>: 11/11/2025</p>
+      <p>-<b>Thể loại</b>: Thinking</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-      <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/high-fight?secret=lZ1TtLUXc8WegYqwYMG6lHlgtQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+      <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/bombsweeper?secret=s2b7p3v58UqFBb1V2btX283BE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -39,7 +39,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/highfight/Screenshot 06-10-2025 220308.png" class="d-block w-100" alt="...">
+      <img src="img/Bombsweeper/Screenshot 13-11-2025 194901.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
