--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/XepHinh/Screenshot 13-11-2025 194234.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -83,8 +83,8 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/Dropper/Screenshot 07-11-2025 174750.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/kcaro2/Screenshot 17-11-2025 002839.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -132,6 +132,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/kcaro2/Screenshot 17-11-2025 002839.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">KCaro 2.0</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="KCaro2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/kcaro-20?secret=8mt2534GFNoVI6JEUiJ1F2wX7UQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
