--- a/index.html
+++ b/index.html
@@ -305,6 +305,24 @@
 
           <div class="col">
             <div class="card shadow-sm styleUpdate">
+              <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-success reggae-one-regular gameTitle">Solider Z</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="SoliderZ.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/folderexplore/folderexplore.png" height="225"> 
               <div class="card-body">
                 <h4 class="text-success reggae-one-regular gameTitle">Folder Explore</h4>
@@ -403,6 +421,23 @@
                     <a href="SpaceSpector.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleBig">
+              <img src="img/Bomber/Screenshot 05-05-2025 082651.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-danger reggae-one-regular gameTitle">Bomber</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Bomber.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/bomber?secret=7uZ6pINXVhqUR8ZEiNqVPToyuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -629,23 +664,6 @@
                   <div class="btn-group">
                     <a href="Jumper.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/jumper?secret=qnPO2uEdx8ypu1LVNhSBwyuuw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/Bomber/Screenshot 05-05-2025 082651.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text reggae-one-regular gameTitle">Bomber</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="Bomber.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/bomber?secret=7uZ6pINXVhqUR8ZEiNqVPToyuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -1043,24 +1061,6 @@
                   <div class="btn-group">
                     <a href="ToOtherSide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text reggae-one-regular gameTitle">Solider Z</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="SoliderZ.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
