--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item"> 
-          <img src="img/VoicePengo/Screenshot 07-11-2025 174603.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active"> 
+          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/kcaro2/Screenshot 17-11-2025 002839.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -132,6 +132,24 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Rhymix 2.0</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Rhymix2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rhymix-2?secret=NxeJdJJKbhQvZf7AskmRPssA22w" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col">
             <div class="card shadow-sm styleNew">
