--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/FruitSlash/Screenshot 13-11-2025 194419.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active"> 
-          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item"> 
+          <img src="img/knifethrown/Screenshot 01-12-2025 094644.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -143,6 +143,23 @@
                   <div class="btn-group">
                     <a href="Rhymix2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/rhymix-2?secret=NxeJdJJKbhQvZf7AskmRPssA22w" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/knifethrown/Screenshot 01-12-2025 094644.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Knife Thrown</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="KnifeThrown.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/knife-thrown?secret=erymD3NE5N3w6y2AUc0jBjOZ3bE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
