--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/Bombsweeper/Screenshot 13-11-2025 194901.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
-          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item">
+          <img src="img/pixelsurvivor/Screenshot 06-12-2025 114152.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -150,6 +150,24 @@
               </div>
             </div>
           </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/pixelsurvivor/Screenshot 06-12-2025 114152.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Pixel Survivor</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PixelSurvivor.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/pixel-suvivor?secret=8YMQV0I2HYk4lHyJGE1zIv6nsTs" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col">
             <div class="card shadow-sm styleNew">
