--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="img/XepHinh/Screenshot 13-11-2025 194234.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/truykid2/Screenshot 08-12-2025 010635.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
-          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item">
+          <img src="img/truykid2/Screenshot 08-12-2025 010635.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -132,6 +132,24 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/truykid2/Screenshot 08-12-2025 010635.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Truy Kid 2.0</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="TruyKid2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/truy-kid-20?secret=AJk3u8w5JXuyuCcuYq9NzANEfxY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Fdrive%2Ffolders%2F1-NZbivqyZd9kofeoUlI3VF4LGmA26q46dTplm1jwCGNzG4M3W8Eue-zIGCPPSx9J4GtLx1ML%3Fusp%3Dsharing%26fbclid%3DIwZXh0bgNhZW0CMTAAYnJpZBExVG9oMmV1SE03TVBtSUdmSXNydGMGYXBwX2lkEDIyMjAzOTE3ODgyMDA4OTIAAR4t28hl9cMpyPhyQwQaa-2VtzOpSixbCjAWbpw6_itUKmjwkqty6gf4mH0waw_aem_6O2SmDt_f2LArISsp1fI2w&h=AT1G9Bl29YggpBaSGtUDrKUM583hqgh-ySNbgx3_vV6sraCVPdfeJh1hMJZlW9lrD0buWOrdbK6eohDFckESl0hLIgxrgW9WW4bZmNnkCkSRSKZKuNstY359z1zmQWhdn0UMdg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Beatmap Store</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
