--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/truykid2/Screenshot 08-12-2025 010635.png" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/rhymix2/Screenshot 01-12-2025 001915.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
