--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                   <div class="btn-group">
                     <a href="TruyKid2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/truy-kid-20?secret=AJk3u8w5JXuyuCcuYq9NzANEfxY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  <small class="text-body-secondary">Free</small>
+                  </div>
+                    <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
