--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/battlepercent2/Screenshot 17-08-2025 101844.jpg" height="225"> 
               <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">Battle Percent 3.0</h4>
+                <h4 class="text-success reggae-one-regular gameTitle">Battle Percent 3.0</h4>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
