--- a/Scoundrel.html
+++ b/Scoundrel.html
@@ -17,18 +17,18 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Planet 67</b></p>
-      <p>-<b>Giới thiệu</b>: Thử làm game giống ROR</p>
+      <p style="text-align: center;"><b>Scoundrel</b></p>
+      <p>-<b>Giới thiệu</b>: Game bài singleplayer rougelike chơi khi chán</p>
       <p>-<b>Phiên bản</b>: 2.0</p>
-      <p>-<b>Phát hành</b>: 11/01/2026</p>
-      <p>-<b>Last Update</b>: 11/01/2026</p>
+      <p>-<b>Phát hành</b>: 14/01/2026</p>
+      <p>-<b>Last Update</b>: 14/01/2026</p>
       <p>-<b>Thể loại</b>: Rougelike</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/planet-67?secret=oVLTp0XDWcSiPpfs5XIcP64NGps" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/scoundrel?secret=xJBdXTk7nPHNcvyVNdyALSJ6HgE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
