--- a/Pikachi.html
+++ b/Pikachi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Scoundrel</title>
+    <title>Pikachi</title>
 </head>
 <body>
 <div class="row">
@@ -17,18 +17,18 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Scoundrel</b></p>
-      <p>-<b>Giới thiệu</b>: Game bài singleplayer rougelike chơi khi chán</p>
+      <p style="text-align: center;"><b>Pikachi</b></p>
+      <p>-<b>Giới thiệu</b>: Classic Pikachu cumback</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 14/01/2026</p>
-      <p>-<b>Last Update</b>: 14/01/2026</p>
+      <p>-<b>Phát hành</b>: 20/01/2026</p>
+      <p>-<b>Last Update</b>: 20/01/2026</p>
       <p>-<b>Thể loại</b>: Rougelike</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/scoundrel?secret=xJBdXTk7nPHNcvyVNdyALSJ6HgE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/pikachi?secret=6d5PCpQpQmGAJmgMwyr1tfdXBHg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/scoundrel/Screenshot 14-01-2026 211905.png" class="d-block w-100" alt="...">
+      <img src="img/pikachi/Screenshot 21-01-2026 115040.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
