--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/scoundrel/Screenshot 14-01-2026 211905.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item">
+          <img src="img/truykid2/Screenshot 08-12-2025 010635.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -73,13 +73,13 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/pixelsurvivor/Screenshot 06-12-2025 114152.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/pikachi/Screenshot 21-01-2026 115040.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item"> 
-          <img src="img/knifethrown/Screenshot 01-12-2025 094644.png" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/scoundrel/Screenshot 14-01-2026 211905.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -132,6 +132,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/pikachi/Screenshot 21-01-2026 115040.png" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Pikachi</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Pikachi.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/pikachi?secret=6d5PCpQpQmGAJmgMwyr1tfdXBHg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                    <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
